crates/plotnik-lib/tests/02-parser/recovery_unexpected/single_colon_type_annotation.txt
(a) @x : (b)
==== diagnostics ====
error: unexpected token
 --> query.ptk:1:8
  |
1 | (a) @x : (b)
  |        ^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
